    will never be reused, retiring is a developer who is retired
    but still receives mail at their @debian.org address.  After
    a few months they should move on to retired, with their mail
    also disabled.  accountStatus is just a freeform text, but
    these 4 options should be the only ones that exist.
  * Allow setting of gender in ud-mailgate.  Based on patch by Bernhard
    R. Link.

 -- Peter Palfrader <weasel@debian.org>  Mon, 09 Jun 2008 22:59:06 +0200

userdir-ldap (0.3.32) unstable; urgency=low

  * Do SSL when connecting to the ldap server.

 -- Peter Palfrader <weasel@debian.org>  Fri, 23 May 2008 23:50:03 +0200

userdir-ldap (0.3.31) unstable; urgency=low

  [ Joerg Jaspert ]
  * Use sync_keyrings from config file in ud-generate instead of a
    hardcoded list
  * Use add_keyrings from config file in ud-useradd instead of a
    hardcoded list
  * Use ud-config to get the emailappend value in ud-replicate, no longer
    hardcoding @debian.org

  [ Stephen Gran ]
  * Document how to use unique overlay for uid and keyFingerPrint

 -- Peter Palfrader <weasel@debian.org>  Fri, 23 May 2008 10:01:51 +0200

userdir-ldap (0.3.30) unstable; urgency=low

  * When we touch usePassword in ud-info or ud-mailgate we now also
    update shadowLastChange.
  * When we lock accounts, set shadowExpire to 1.  shadowExpire
    is "days since Jan 1, 1970 that account is disabled".
  * Properly capitalize shadowInactive and shadowExpire attributes in
    ud-info and ud-generate.
  * Add copyright statements to ud-info from bzr log.

 -- Peter Palfrader <weasel@debian.org>  Thu, 22 May 2008 22:39:10 +0200

userdir-ldap (0.3.29) unstable; urgency=low

  * ud-info: Add an option "L" to lock accounts in the interactive
    interface.  Locking an account sets a user's password to "{crypt}*LK*"
    and sets a mailDisableMessage of "account locked".

 -- Peter Palfrader <weasel@debian.org>  Thu, 22 May 2008 21:49:19 +0200

userdir-ldap (0.3.28) unstable; urgency=low
