@@ -1,0 +1,14 @@
+userdir-ldap-slapd.conf
+build
+debian/files
+debian/userdir-ldap
+debian/userdir-ldap.postinst.debhelper
+debian/userdir-ldap.prerm.debhelper
+debian/userdir-ldap.substvars
+doc/ud-generate.8
+doc/ud-gpgimport.8
+doc/ud-info.1
+doc/ud-mailgate.8
+doc/ud-useradd.8
+doc/ud-userimport.8
+doc/ud-xearth.1
