@@ -13,8 +13,10 @@ userdir-ldap (0.3.3X) Xnstable; urgency=low
     these 4 options should be the only ones that exist.
   * Allow setting of gender in ud-mailgate.  Based on patch by Bernhard
     R. Link.
+  * Add userdir-ldap-slapd.conf, a snipped to be included in slapd.conf
+    to the package.
 
- -- Peter Palfrader <weasel@debian.org>  Mon, 09 Jun 2008 22:59:06 +0200
+ -- Peter Palfrader <weasel@debian.org>  Mon, 23 Jun 2008 22:52:36 +0200
 
 userdir-ldap (0.3.32) unstable; urgency=low
 
